--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "DL-MP4",
-  "version": "0.0.1",
-  "description": "Node.js Youtube MP4 downloader",
-  "main": "server.js",
+  "name": "yt-mp4",
+  "version": "1.0.0",
+  "description": "Youtube MP4 download API",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "get-title-at-url": "^1.1.8",
-    "handlebars": "^4.7.7",
-    "point-of-view": "^4.14.0",
-    "ytdl-core": "^4.9.1"
-  },
-  "engines": {
-    "node": "12.x"
+    "test": "node index.js"
   },
   "repository": {
-    "url": "https://github.com/Segilmez06/YT-MP4-Downloader"
+    "type": "git",
+    "url": "git+https://github.com/Segilmez06/Youtube-MP4.git"
   },
-  "license": "MIT"
+  "keywords": [
+    "download"
+  ],
+  "author": "Segilmez06",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Segilmez06/Youtube-MP4/issues"
+  },
+  "homepage": "https://github.com/Segilmez06/Youtube-MP4#readme",
+  "dependencies": {
+    "ytdl-core": "^4.11.0"
+  }
 }
